Issue-179 - 2-steps Auth: text doesn't fit in box

--- a/application/views/styles/main.css
+++ b/application/views/styles/main.css
@@ -670,7 +670,7 @@ section.logo {
 }
 
 .tfa .tfa-box {
-	height: 325px;
+	height: 340px;
 }
 
 .tfa-title {
